src/test/deca/syntax/invalid/created/test_invalid_public.deca
class A {
    // Erreur : 'public' n'existe pas pour les champs en Deca
    public int x; 
}